--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "polymer-summit-2017",
   "license": "BSD-3-Clause",
   "devDependencies": {
     "eslint": "^3.19.0",
